@@ -15,6 +15,7 @@ import java.io.IOException;
 import java.io.UnsupportedEncodingException;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.time.Duration;
 import java.util.HashMap;
 import java.util.Map;
@@ -28,8 +29,7 @@ public class ApiCaller {
 		return instance;
 	}
 
-	private ApiCaller() {
-	}
+	private ApiCaller() {}
 
 	public String get(String url, HashMap<String, Object> params) throws IOException {
 		RestTemplate restTemplate = new RestTemplate();
@@ -162,10 +162,6 @@ public class ApiCaller {
 	}
 
 	private String urlEncodeUTF8(String s) {
-		try {
-			return URLEncoder.encode(s, "UTF-8");
-		} catch (UnsupportedEncodingException e) {
-			throw new UnsupportedOperationException(e);
-		}
+		return URLEncoder.encode(s, StandardCharsets.UTF_8);
 	}
 }
